force-app/main/default/objects/Account/fields/Total_Outstanding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Outstanding_Amount__c</fullName>
    <formula>Total_Invoice_Amount__c - Total_Payments_Credits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Outstanding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>