force-app/main/default/objects/Account/fields/Total_Paid_Amounts__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_Amounts__c</fullName>
    <label>Total Paid Amount</label>
    <summarizedField>Invoice__c.Total_Invoice_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice__c.Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.Parent_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>