force-app/main/default/objects/Account/fields/Total_Payment_Credit_Available__c.field-meta.xml
<CustomField>
    <fullName>Total_Payment_Credit_Available__c</fullName>
    <label>Total Payment Credit Available</label>
    <summarizedField>Payment__c.Payment_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment__c.Payment_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Payment__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Payment As Credit</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Parent_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>