force-app/main/default/objects/Account/fields/Travel_Time__c.field-meta.xml
<CustomField>
    <fullName>Travel_Time__c</fullName>
    <defaultValue>30</defaultValue>
    <description>Aureus at Home</description>
    <inlineHelpText>Applicable for the home lessons</inlineHelpText>
    <label>Travel Time(In Minutes)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>