force-app/main/default/objects/Account/fields/Unique_Referral_Code__c.field-meta.xml
<CustomField>
    <fullName>Unique_Referral_Code__c</fullName>
    <description>This field is use to generate  Referral Code</description>
    <formula>IF(!ISBLANK(FirstName) , MID( FirstName, 1, 1), &apos;&apos;) &amp; IF(!ISBLANK(LastName ) , MID( LastName , 1, 1),&apos;&apos;) &amp; AccountAutoNum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Referral Code</label>
    <type>Text</type>
</CustomField>