force-app/main/default/objects/Account/fields/Updated_Personal_Details__c.field-meta.xml
<CustomField>
    <fullName>Updated_Personal_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated Personal Details (KYC) 
From Portal Sign Up (Site Page)</description>
    <label>Updated Personal Details</label>
    <type>Checkbox</type>
</CustomField>