force-app/main/default/objects/Account/fields/Want_Invoice_As_Email__c.field-meta.xml
<CustomField>
    <fullName>Want_Invoice_As_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Want Invoice As Email</label>
    <type>Checkbox</type>
</CustomField>