force-app/main/default/objects/Account/fields/Weekly_Teaching_Hours__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Teaching_Hours__c</fullName>
    <label>Weekly Teaching Hours</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>