force-app/main/default/objects/Account/fields/Work_Location__c.field-meta.xml
<CustomField>
    <fullName>Work_Location__c</fullName>
    <label>Work Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Singapore</fullName>
                <default>true</default>
                <label>Singapore</label>
            </value>
            <value>
                <fullName>Hong Kong</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>