force-app/main/default/objects/Account/recordTypes/Centre.recordType-meta.xml
<RecordType>
    <fullName>Centre</fullName>
    <active>true</active>
    <description>Select this record type to create a Centre</description>
    <label>Centre</label>
</RecordType>