force-app/main/default/objects/Account/validationRules/Centre_Name_can_not_be_more_than_20_char.validationRule-meta.xml
<ValidationRule>
    <fullName>Centre_Name_can_not_be_more_than_20_char</fullName>
    <active>true</active>
    <description>Centre name can not be be more than 20 character.</description>
    <errorConditionFormula>AND( RecordType.Name = &quot;Centre&quot;,
LEN(Name) &gt;20)</errorConditionFormula>
    <errorMessage>Centre name can not be more than 20 character.</errorMessage>
</ValidationRule>