force-app/main/default/objects/Account/validationRules/Check_Is_Member.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Is_Member</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(American_club__c)), (ISBLANK(TEXT( Membership_Type__c))|| ISBLANK(Membership_Number__c)))</errorConditionFormula>
    <errorDisplayField>American_club__c</errorDisplayField>
    <errorMessage>On select of American club, Membership type and Membership number are required</errorMessage>
</ValidationRule>