force-app/main/default/objects/Account/validationRules/Employee_Birthdate_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Employee_Birthdate_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.Name=&apos;Employee&apos;,ISPICKVAL(Onboarding_Stage__c,&apos;Completed&apos;),IsBlank(PersonBirthdate))</errorConditionFormula>
    <errorMessage>Please enter the employee birthdate before completing the onboarding process.</errorMessage>
</ValidationRule>