force-app/main/default/objects/Account/validationRules/Last_Working_Date_less_than_Joining_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Last_Working_Date_less_than_Joining_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND((OR(RecordType.DeveloperName=&apos;Employee&apos;,RecordType.DeveloperName=&apos;Teacher&apos;)),Last_Working_Date__c!=null,Joining_Date__c!=null,
(Last_Working_Date__c &lt; Joining_Date__c))</errorConditionFormula>
    <errorMessage>Last working date should be greater than Joining date.</errorMessage>
</ValidationRule>