force-app/main/default/objects/Account/validationRules/Mandatory_commission_percent.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_commission_percent</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(RecordType.Name=&apos;Employee&apos;,RecordType.Name=&apos;Teacher&apos;),
ISPICKVAL(Payout_Type__c, &apos;Commission&apos;),
OR(Not(Individual_Commission__c&gt;0),Not(Group_Commission__c&gt;0))
)</errorConditionFormula>
    <errorMessage>Individual or Group commission percent are required for commission payout.</errorMessage>
</ValidationRule>