force-app/main/default/objects/Account/validationRules/Tax_Number_9_digit.validationRule-meta.xml
<ValidationRule>
    <fullName>Tax_Number_9_digit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
(OR(RecordType.Name=&apos;Employee&apos;,RecordType.Name=&apos;Teacher&apos;)),
NOT(ISBLANK(Tax_Number__c)),
 LEN(Tax_Number__c)&lt;9  
)</errorConditionFormula>
    <errorMessage>Please enter a valid 9 digit tax number.</errorMessage>
</ValidationRule>