force-app/main/default/objects/Account/listViews/All_Parents.listView-meta.xml
<ListView>
    <fullName>All_Parents</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>AccountID_Customer__c</columns>
    <columns>CustIndicator__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_EMAIL</columns>
    <columns>App_Portal_User__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Customer</value>
    </filters>
    <filters>
        <field>Parent__c</field>
        <operation>equals</operation>
    </filters>
    <label>All Customers</label>
</ListView>