force-app/main/default/objects/Account/listViews/All_Students.listView-meta.xml
<ListView>
    <fullName>All_Students</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>AccountID_Customer__c</columns>
    <columns>Parent__c</columns>
    <columns>CustIndicator__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_EMAIL</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Customer</value>
    </filters>
    <filters>
        <field>Parent__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Students</label>
</ListView>