force-app/main/default/objects/Account/listViews/All_Teachers_Portal.listView-meta.xml
<ListView>
    <fullName>All_Teachers_Portal</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Teacher_Portal_Invitation__c</columns>
    <columns>App_Portal_User__c</columns>
    <columns>Status__c</columns>
    <columns>CustIndicator__c</columns>
    <columns>Major_Instruments_Disciplines__c</columns>
    <columns>PC_EMAIL</columns>
    <columns>AccountID_Teacher__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Teacher</value>
    </filters>
    <filters>
        <field>PC_EMAIL</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Working</value>
    </filters>
    <filters>
        <field>App_Portal_User__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Active Teachers (Portal)</label>
</ListView>