force-app/main/default/objects/Account/listViews/American_Club_Customers.listView-meta.xml
<ListView>
    <fullName>American_Club_Customers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Membership_Number__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Membership_Type__c</field>
        <operation>equals</operation>
        <value>American Club</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Customer</value>
    </filters>
    <label>American Club Customers</label>
</ListView>