force-app/main/default/objects/Account/listViews/Commission_Employees.listView-meta.xml
<ListView>
    <fullName>Commission_Employees</fullName>
    <columns>Employee_Code__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Employee_Duty_Type__c</columns>
    <columns>Employee_Status__c</columns>
    <columns>Payout_Type__c</columns>
    <columns>Individual_Commission__c</columns>
    <columns>Group_Commission__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Employee,PersonAccount.Teacher</value>
    </filters>
    <filters>
        <field>Payout_Type__c</field>
        <operation>equals</operation>
        <value>Commission</value>
    </filters>
    <label>Commission Employees</label>
    <sharedTo>
        <role>HR_Executive</role>
        <role>HR_Manager</role>
    </sharedTo>
</ListView>