force-app/main/default/objects/Account/listViews/Ex_Employees.listView-meta.xml
<ListView>
    <fullName>Ex_Employees</fullName>
    <columns>Employee_Code__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ID_Type__c</columns>
    <columns>Identification_Number__c</columns>
    <columns>Job_Title__c</columns>
    <columns>Last_Working_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Employee_Status__c</field>
        <operation>equals</operation>
        <value>Left</value>
    </filters>
    <label>Ex-Employees</label>
    <sharedTo>
        <role>HR_Executive</role>
        <role>HR_Manager</role>
    </sharedTo>
</ListView>